--- a/3qest/css/style.css
+++ b/3qest/css/style.css
@@ -275,7 +275,7 @@ h4{
 .boxflex .img1{
     height: 260px;
     flex-basis: 360px;
-    background-image: url(imgCSS/portfolio1.png);
+    background:url(imgCSS/portfolio1.png);
     padding: 0;
     margin-bottom: 30px;
     margin-right: 30px;
@@ -285,9 +285,9 @@ h4{
 
 
 .boxflex .img1:hover{
-    background-image: url(imgCSS/Hober1111111.png);
-    transform: scale(1);
+    background-image: url(imgCSS/%D0%93%D1%80%D1%83%D0%BF%D0%BF%D0%B0%201.png);
 }
+
 
 .boxflex .img1:active{
     background-image: url(imgCSS/portfolio1.png);
